--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 	<description>Hackenews clone for cycling news</description>
 	<properties>
 		<java.version>17</java.version>
-		<vaadin.version>22.0.4</vaadin.version>
+		<vaadin.version>22.0.5</vaadin.version>
 		<rss.version>2.5.0</rss.version>
 		<detect.language.version>1.1.0</detect.language.version>
+		<maven.versions.plugin>2.9.0</maven.versions.plugin>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,6 +70,17 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>${maven.versions.plugin}</version>
+			</plugin>
+		</plugins>
+	</build>
 
 <!--	<build>-->
 <!--		<plugins>-->
@@ -152,7 +164,6 @@
 	</profiles>
 
 	<repositories>
-
 		<repository>
 			<id>central</id>
 			<name>Maven Central</name>
