Switch RSS reader implementation

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<vaadin.version>22.0.5</vaadin.version>
-		<rss.version>2.5.0</rss.version>
 		<detect.language.version>1.1.0</detect.language.version>
 		<maven.versions.plugin>2.9.0</maven.versions.plugin>
+		<rome.rss.version>1.18.0</rome.rss.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,9 +49,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.apptastic</groupId>
-			<artifactId>rssreader</artifactId>
-			<version>${rss.version}</version>
+			<groupId>com.rometools</groupId>
+			<artifactId>rome</artifactId>
+			<version>${rome.rss.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.detectlanguage</groupId>
