--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ch.climbd</groupId>
@@ -15,12 +15,13 @@
 	<description>Hackenews clone for cycling news</description>
 	<properties>
 		<java.version>18</java.version>
-		<vaadin.version>23.0.8</vaadin.version>
+		<vaadin.version>23.0.9</vaadin.version>
 		<detect.language.version>1.1.0</detect.language.version>
 		<maven.versions.plugin>2.9.0</maven.versions.plugin>
 		<rome.rss.version>1.18.0</rome.rss.version>
 		<browserstorage.version>1.0.0</browserstorage.version>
 		<jpushover.version>7.0.1</jpushover.version>
+		<cache2k-version>2.6.1.Final</cache2k-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,6 +65,22 @@
 			<groupId>de.svenkubiak</groupId>
 			<artifactId>jpushover</artifactId>
 			<version>${jpushover.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cache2k</groupId>
+			<artifactId>cache2k-api</artifactId>
+			<version>${cache2k-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cache2k</groupId>
+			<artifactId>cache2k-core</artifactId>
+			<version>${cache2k-version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cache2k</groupId>
+			<artifactId>cache2k-spring</artifactId>
+			<version>${cache2k-version}</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
