--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0-M5</version>
+        <version>2.7.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ch.climbd</groupId>
@@ -20,7 +20,6 @@
         <rome.rss.version>1.18.0</rome.rss.version>
         <browserstorage.version>1.0.0</browserstorage.version>
         <jpushover.version>7.0.2</jpushover.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,12 +58,6 @@
             <groupId>de.svenkubiak</groupId>
             <artifactId>jpushover</artifactId>
             <version>${jpushover.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${javax.servlet-api.version}</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
@@ -186,7 +179,7 @@
         <repository>
             <id>spring-release</id>
             <name>Spring release</name>
-            <url>https://repo.spring.io/milestone</url>
+            <url>https://repo.spring.io/release</url>
         </repository>
         <repository>
             <id>vaadin-addons</id>
@@ -198,7 +191,7 @@
         <pluginRepository>
             <id>spring-release</id>
             <name>Spring release</name>
-            <url>https://repo.spring.io/milestone</url>
+            <url>https://repo.spring.io/release</url>
         </pluginRepository>
     </pluginRepositories>
 
