--- a/package.json
+++ b/package.json
@@ -2,107 +2,69 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/iron-icon": "3.0.1",
-    "@polymer/iron-iconset-svg": "3.0.1",
-    "@polymer/iron-list": "3.1.0",
-    "@polymer/iron-meta": "3.0.1",
-    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "23.2.6",
-    "@vaadin/app-layout": "23.2.6",
-    "@vaadin/avatar": "23.2.6",
-    "@vaadin/avatar-group": "23.2.6",
-    "@vaadin/bundles": "23.2.6",
-    "@vaadin/button": "23.2.6",
-    "@vaadin/checkbox": "23.2.6",
-    "@vaadin/checkbox-group": "23.2.6",
-    "@vaadin/combo-box": "23.2.6",
+    "@vaadin/accordion": "24.0.0-alpha5",
+    "@vaadin/app-layout": "24.0.0-alpha5",
+    "@vaadin/avatar": "24.0.0-alpha5",
+    "@vaadin/avatar-group": "24.0.0-alpha5",
+    "@vaadin/bundles": "24.0.0-alpha5",
+    "@vaadin/button": "24.0.0-alpha5",
+    "@vaadin/checkbox": "24.0.0-alpha5",
+    "@vaadin/checkbox-group": "24.0.0-alpha5",
+    "@vaadin/combo-box": "24.0.0-alpha5",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "23.2.6",
-    "@vaadin/confirm-dialog": "23.2.6",
-    "@vaadin/context-menu": "23.2.6",
-    "@vaadin/custom-field": "23.2.6",
-    "@vaadin/date-picker": "23.2.6",
-    "@vaadin/date-time-picker": "23.2.6",
-    "@vaadin/details": "23.2.6",
-    "@vaadin/dialog": "23.2.6",
-    "@vaadin/email-field": "23.2.6",
-    "@vaadin/field-base": "23.2.6",
-    "@vaadin/field-highlighter": "23.2.6",
+    "@vaadin/component-base": "24.0.0-alpha5",
+    "@vaadin/confirm-dialog": "24.0.0-alpha5",
+    "@vaadin/context-menu": "24.0.0-alpha5",
+    "@vaadin/custom-field": "24.0.0-alpha5",
+    "@vaadin/date-picker": "24.0.0-alpha5",
+    "@vaadin/date-time-picker": "24.0.0-alpha5",
+    "@vaadin/details": "24.0.0-alpha5",
+    "@vaadin/dialog": "24.0.0-alpha5",
+    "@vaadin/email-field": "24.0.0-alpha5",
+    "@vaadin/field-base": "24.0.0-alpha5",
+    "@vaadin/field-highlighter": "24.0.0-alpha5",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/form-layout": "23.2.6",
-    "@vaadin/grid": "23.2.6",
-    "@vaadin/horizontal-layout": "23.2.6",
-    "@vaadin/icon": "23.2.6",
-    "@vaadin/icons": "23.2.6",
-    "@vaadin/input-container": "23.2.6",
-    "@vaadin/integer-field": "23.2.6",
-    "@vaadin/item": "23.2.6",
-    "@vaadin/list-box": "23.2.6",
-    "@vaadin/lit-renderer": "23.2.6",
-    "@vaadin/login": "23.2.6",
-    "@vaadin/menu-bar": "23.2.6",
-    "@vaadin/message-input": "23.2.6",
-    "@vaadin/message-list": "23.2.6",
-    "@vaadin/multi-select-combo-box": "23.2.6",
-    "@vaadin/notification": "23.2.6",
-    "@vaadin/number-field": "23.2.6",
-    "@vaadin/password-field": "23.2.6",
-    "@vaadin/polymer-legacy-adapter": "23.2.6",
-    "@vaadin/progress-bar": "23.2.6",
-    "@vaadin/radio-group": "23.2.6",
+    "@vaadin/form-layout": "24.0.0-alpha5",
+    "@vaadin/grid": "24.0.0-alpha5",
+    "@vaadin/horizontal-layout": "24.0.0-alpha5",
+    "@vaadin/icon": "24.0.0-alpha5",
+    "@vaadin/icons": "24.0.0-alpha5",
+    "@vaadin/input-container": "24.0.0-alpha5",
+    "@vaadin/integer-field": "24.0.0-alpha5",
+    "@vaadin/item": "24.0.0-alpha5",
+    "@vaadin/list-box": "24.0.0-alpha5",
+    "@vaadin/lit-renderer": "24.0.0-alpha5",
+    "@vaadin/login": "24.0.0-alpha5",
+    "@vaadin/menu-bar": "24.0.0-alpha5",
+    "@vaadin/message-input": "24.0.0-alpha5",
+    "@vaadin/message-list": "24.0.0-alpha5",
+    "@vaadin/multi-select-combo-box": "24.0.0-alpha5",
+    "@vaadin/notification": "24.0.0-alpha5",
+    "@vaadin/number-field": "24.0.0-alpha5",
+    "@vaadin/overlay": "24.0.0-alpha5",
+    "@vaadin/password-field": "24.0.0-alpha5",
+    "@vaadin/polymer-legacy-adapter": "24.0.0-alpha5",
+    "@vaadin/progress-bar": "24.0.0-alpha5",
+    "@vaadin/radio-group": "24.0.0-alpha5",
     "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "23.2.6",
-    "@vaadin/select": "23.2.6",
-    "@vaadin/split-layout": "23.2.6",
-    "@vaadin/tabs": "23.2.6",
-    "@vaadin/text-area": "23.2.6",
-    "@vaadin/text-field": "23.2.6",
-    "@vaadin/time-picker": "23.2.6",
-    "@vaadin/upload": "23.2.6",
-    "@vaadin/vaadin-accordion": "23.2.6",
-    "@vaadin/vaadin-app-layout": "23.2.6",
-    "@vaadin/vaadin-avatar": "23.2.6",
-    "@vaadin/vaadin-button": "23.2.6",
-    "@vaadin/vaadin-checkbox": "23.2.6",
-    "@vaadin/vaadin-combo-box": "23.2.6",
-    "@vaadin/vaadin-confirm-dialog": "23.2.6",
-    "@vaadin/vaadin-context-menu": "23.2.6",
-    "@vaadin/vaadin-custom-field": "23.2.6",
-    "@vaadin/vaadin-date-picker": "23.2.6",
-    "@vaadin/vaadin-date-time-picker": "23.2.6",
-    "@vaadin/vaadin-details": "23.2.6",
+    "@vaadin/scroller": "24.0.0-alpha5",
+    "@vaadin/select": "24.0.0-alpha5",
+    "@vaadin/split-layout": "24.0.0-alpha5",
+    "@vaadin/tabs": "24.0.0-alpha5",
+    "@vaadin/tabsheet": "24.0.0-alpha5",
+    "@vaadin/text-area": "24.0.0-alpha5",
+    "@vaadin/text-field": "24.0.0-alpha5",
+    "@vaadin/time-picker": "24.0.0-alpha5",
+    "@vaadin/tooltip": "24.0.0-alpha5",
+    "@vaadin/upload": "24.0.0-alpha5",
     "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-dialog": "23.2.6",
-    "@vaadin/vaadin-form-layout": "23.2.6",
-    "@vaadin/vaadin-grid": "23.2.6",
-    "@vaadin/vaadin-icon": "23.2.6",
-    "@vaadin/vaadin-icons": "23.2.6",
-    "@vaadin/vaadin-item": "23.2.6",
-    "@vaadin/vaadin-list-box": "23.2.6",
-    "@vaadin/vaadin-list-mixin": "23.2.6",
-    "@vaadin/vaadin-login": "23.2.6",
-    "@vaadin/vaadin-lumo-styles": "23.2.6",
-    "@vaadin/vaadin-material-styles": "23.2.6",
-    "@vaadin/vaadin-menu-bar": "23.2.6",
-    "@vaadin/vaadin-messages": "23.2.6",
-    "@vaadin/vaadin-notification": "23.2.6",
-    "@vaadin/vaadin-ordered-layout": "23.2.6",
-    "@vaadin/vaadin-overlay": "23.2.6",
-    "@vaadin/vaadin-progress-bar": "23.2.6",
-    "@vaadin/vaadin-radio-button": "23.2.6",
-    "@vaadin/vaadin-select": "23.2.6",
-    "@vaadin/vaadin-split-layout": "23.2.6",
-    "@vaadin/vaadin-tabs": "23.2.6",
-    "@vaadin/vaadin-template-renderer": "23.2.6",
-    "@vaadin/vaadin-text-field": "23.2.6",
-    "@vaadin/vaadin-themable-mixin": "23.2.6",
-    "@vaadin/vaadin-time-picker": "23.2.6",
-    "@vaadin/vaadin-upload": "23.2.6",
+    "@vaadin/vaadin-lumo-styles": "24.0.0-alpha5",
+    "@vaadin/vaadin-material-styles": "24.0.0-alpha5",
+    "@vaadin/vaadin-themable-mixin": "24.0.0-alpha5",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vaadin-virtual-list": "23.2.6",
-    "@vaadin/vertical-layout": "23.2.6",
-    "@vaadin/virtual-list": "23.2.6",
+    "@vaadin/vertical-layout": "24.0.0-alpha5",
+    "@vaadin/virtual-list": "24.0.0-alpha5",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "2.3.0"
@@ -124,106 +86,68 @@
   },
   "vaadin": {
     "dependencies": {
-      "@polymer/iron-icon": "3.0.1",
-      "@polymer/iron-iconset-svg": "3.0.1",
-      "@polymer/iron-list": "3.1.0",
-      "@polymer/iron-meta": "3.0.1",
-      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "23.2.6",
-      "@vaadin/app-layout": "23.2.6",
-      "@vaadin/avatar": "23.2.6",
-      "@vaadin/avatar-group": "23.2.6",
-      "@vaadin/bundles": "23.2.6",
-      "@vaadin/button": "23.2.6",
-      "@vaadin/checkbox": "23.2.6",
-      "@vaadin/checkbox-group": "23.2.6",
-      "@vaadin/combo-box": "23.2.6",
+      "@vaadin/accordion": "24.0.0-alpha5",
+      "@vaadin/app-layout": "24.0.0-alpha5",
+      "@vaadin/avatar": "24.0.0-alpha5",
+      "@vaadin/avatar-group": "24.0.0-alpha5",
+      "@vaadin/bundles": "24.0.0-alpha5",
+      "@vaadin/button": "24.0.0-alpha5",
+      "@vaadin/checkbox": "24.0.0-alpha5",
+      "@vaadin/checkbox-group": "24.0.0-alpha5",
+      "@vaadin/combo-box": "24.0.0-alpha5",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "23.2.6",
-      "@vaadin/confirm-dialog": "23.2.6",
-      "@vaadin/context-menu": "23.2.6",
-      "@vaadin/custom-field": "23.2.6",
-      "@vaadin/date-picker": "23.2.6",
-      "@vaadin/date-time-picker": "23.2.6",
-      "@vaadin/details": "23.2.6",
-      "@vaadin/dialog": "23.2.6",
-      "@vaadin/email-field": "23.2.6",
-      "@vaadin/field-base": "23.2.6",
-      "@vaadin/field-highlighter": "23.2.6",
-      "@vaadin/form-layout": "23.2.6",
-      "@vaadin/grid": "23.2.6",
-      "@vaadin/horizontal-layout": "23.2.6",
-      "@vaadin/icon": "23.2.6",
-      "@vaadin/icons": "23.2.6",
-      "@vaadin/input-container": "23.2.6",
-      "@vaadin/integer-field": "23.2.6",
-      "@vaadin/item": "23.2.6",
-      "@vaadin/list-box": "23.2.6",
-      "@vaadin/lit-renderer": "23.2.6",
-      "@vaadin/login": "23.2.6",
-      "@vaadin/menu-bar": "23.2.6",
-      "@vaadin/message-input": "23.2.6",
-      "@vaadin/message-list": "23.2.6",
-      "@vaadin/multi-select-combo-box": "23.2.6",
-      "@vaadin/notification": "23.2.6",
-      "@vaadin/number-field": "23.2.6",
-      "@vaadin/password-field": "23.2.6",
-      "@vaadin/polymer-legacy-adapter": "23.2.6",
-      "@vaadin/progress-bar": "23.2.6",
-      "@vaadin/radio-group": "23.2.6",
+      "@vaadin/component-base": "24.0.0-alpha5",
+      "@vaadin/confirm-dialog": "24.0.0-alpha5",
+      "@vaadin/context-menu": "24.0.0-alpha5",
+      "@vaadin/custom-field": "24.0.0-alpha5",
+      "@vaadin/date-picker": "24.0.0-alpha5",
+      "@vaadin/date-time-picker": "24.0.0-alpha5",
+      "@vaadin/details": "24.0.0-alpha5",
+      "@vaadin/dialog": "24.0.0-alpha5",
+      "@vaadin/email-field": "24.0.0-alpha5",
+      "@vaadin/field-base": "24.0.0-alpha5",
+      "@vaadin/field-highlighter": "24.0.0-alpha5",
+      "@vaadin/form-layout": "24.0.0-alpha5",
+      "@vaadin/grid": "24.0.0-alpha5",
+      "@vaadin/horizontal-layout": "24.0.0-alpha5",
+      "@vaadin/icon": "24.0.0-alpha5",
+      "@vaadin/icons": "24.0.0-alpha5",
+      "@vaadin/input-container": "24.0.0-alpha5",
+      "@vaadin/integer-field": "24.0.0-alpha5",
+      "@vaadin/item": "24.0.0-alpha5",
+      "@vaadin/list-box": "24.0.0-alpha5",
+      "@vaadin/lit-renderer": "24.0.0-alpha5",
+      "@vaadin/login": "24.0.0-alpha5",
+      "@vaadin/menu-bar": "24.0.0-alpha5",
+      "@vaadin/message-input": "24.0.0-alpha5",
+      "@vaadin/message-list": "24.0.0-alpha5",
+      "@vaadin/multi-select-combo-box": "24.0.0-alpha5",
+      "@vaadin/notification": "24.0.0-alpha5",
+      "@vaadin/number-field": "24.0.0-alpha5",
+      "@vaadin/overlay": "24.0.0-alpha5",
+      "@vaadin/password-field": "24.0.0-alpha5",
+      "@vaadin/polymer-legacy-adapter": "24.0.0-alpha5",
+      "@vaadin/progress-bar": "24.0.0-alpha5",
+      "@vaadin/radio-group": "24.0.0-alpha5",
       "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "23.2.6",
-      "@vaadin/select": "23.2.6",
-      "@vaadin/split-layout": "23.2.6",
-      "@vaadin/tabs": "23.2.6",
-      "@vaadin/text-area": "23.2.6",
-      "@vaadin/text-field": "23.2.6",
-      "@vaadin/time-picker": "23.2.6",
-      "@vaadin/upload": "23.2.6",
-      "@vaadin/vaadin-accordion": "23.2.6",
-      "@vaadin/vaadin-app-layout": "23.2.6",
-      "@vaadin/vaadin-avatar": "23.2.6",
-      "@vaadin/vaadin-button": "23.2.6",
-      "@vaadin/vaadin-checkbox": "23.2.6",
-      "@vaadin/vaadin-combo-box": "23.2.6",
-      "@vaadin/vaadin-confirm-dialog": "23.2.6",
-      "@vaadin/vaadin-context-menu": "23.2.6",
-      "@vaadin/vaadin-custom-field": "23.2.6",
-      "@vaadin/vaadin-date-picker": "23.2.6",
-      "@vaadin/vaadin-date-time-picker": "23.2.6",
-      "@vaadin/vaadin-details": "23.2.6",
+      "@vaadin/scroller": "24.0.0-alpha5",
+      "@vaadin/select": "24.0.0-alpha5",
+      "@vaadin/split-layout": "24.0.0-alpha5",
+      "@vaadin/tabs": "24.0.0-alpha5",
+      "@vaadin/tabsheet": "24.0.0-alpha5",
+      "@vaadin/text-area": "24.0.0-alpha5",
+      "@vaadin/text-field": "24.0.0-alpha5",
+      "@vaadin/time-picker": "24.0.0-alpha5",
+      "@vaadin/tooltip": "24.0.0-alpha5",
+      "@vaadin/upload": "24.0.0-alpha5",
       "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-dialog": "23.2.6",
-      "@vaadin/vaadin-form-layout": "23.2.6",
-      "@vaadin/vaadin-grid": "23.2.6",
-      "@vaadin/vaadin-icon": "23.2.6",
-      "@vaadin/vaadin-icons": "23.2.6",
-      "@vaadin/vaadin-item": "23.2.6",
-      "@vaadin/vaadin-list-box": "23.2.6",
-      "@vaadin/vaadin-list-mixin": "23.2.6",
-      "@vaadin/vaadin-login": "23.2.6",
-      "@vaadin/vaadin-lumo-styles": "23.2.6",
-      "@vaadin/vaadin-material-styles": "23.2.6",
-      "@vaadin/vaadin-menu-bar": "23.2.6",
-      "@vaadin/vaadin-messages": "23.2.6",
-      "@vaadin/vaadin-notification": "23.2.6",
-      "@vaadin/vaadin-ordered-layout": "23.2.6",
-      "@vaadin/vaadin-overlay": "23.2.6",
-      "@vaadin/vaadin-progress-bar": "23.2.6",
-      "@vaadin/vaadin-radio-button": "23.2.6",
-      "@vaadin/vaadin-select": "23.2.6",
-      "@vaadin/vaadin-split-layout": "23.2.6",
-      "@vaadin/vaadin-tabs": "23.2.6",
-      "@vaadin/vaadin-template-renderer": "23.2.6",
-      "@vaadin/vaadin-text-field": "23.2.6",
-      "@vaadin/vaadin-themable-mixin": "23.2.6",
-      "@vaadin/vaadin-time-picker": "23.2.6",
-      "@vaadin/vaadin-upload": "23.2.6",
+      "@vaadin/vaadin-lumo-styles": "24.0.0-alpha5",
+      "@vaadin/vaadin-material-styles": "24.0.0-alpha5",
+      "@vaadin/vaadin-themable-mixin": "24.0.0-alpha5",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vaadin-virtual-list": "23.2.6",
-      "@vaadin/vertical-layout": "23.2.6",
-      "@vaadin/virtual-list": "23.2.6",
+      "@vaadin/vertical-layout": "24.0.0-alpha5",
+      "@vaadin/virtual-list": "24.0.0-alpha5",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "2.3.0"
@@ -243,7 +167,7 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash": "b943b040c4206ef13e51d235d17d3125bf4505b11aca0a9b5555a961a896b9ac"
+    "hash": "a31acaa8b3f8d7bc19e31490eed902735a2c2df7819f9ae082453bb84cf424d6"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -272,11 +196,6 @@
     "@vaadin/icons": "$@vaadin/icons",
     "@vaadin/input-container": "$@vaadin/input-container",
     "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@polymer/iron-icon": "$@polymer/iron-icon",
-    "@polymer/iron-iconset-svg": "$@polymer/iron-iconset-svg",
-    "@polymer/iron-list": "$@polymer/iron-list",
-    "@polymer/iron-meta": "$@polymer/iron-meta",
-    "@polymer/iron-resizable-behavior": "$@polymer/iron-resizable-behavior",
     "@vaadin/item": "$@vaadin/item",
     "@vaadin/list-box": "$@vaadin/list-box",
     "@vaadin/login": "$@vaadin/login",
@@ -297,47 +216,12 @@
     "@vaadin/text-field": "$@vaadin/text-field",
     "@vaadin/time-picker": "$@vaadin/time-picker",
     "@vaadin/upload": "$@vaadin/upload",
-    "@vaadin/vaadin-accordion": "$@vaadin/vaadin-accordion",
-    "@vaadin/vaadin-app-layout": "$@vaadin/vaadin-app-layout",
-    "@vaadin/vaadin-avatar": "$@vaadin/vaadin-avatar",
-    "@vaadin/vaadin-button": "$@vaadin/vaadin-button",
-    "@vaadin/vaadin-checkbox": "$@vaadin/vaadin-checkbox",
-    "@vaadin/vaadin-combo-box": "$@vaadin/vaadin-combo-box",
-    "@vaadin/vaadin-context-menu": "$@vaadin/vaadin-context-menu",
-    "@vaadin/vaadin-custom-field": "$@vaadin/vaadin-custom-field",
-    "@vaadin/vaadin-date-picker": "$@vaadin/vaadin-date-picker",
-    "@vaadin/vaadin-date-time-picker": "$@vaadin/vaadin-date-time-picker",
-    "@vaadin/vaadin-details": "$@vaadin/vaadin-details",
     "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
-    "@vaadin/vaadin-dialog": "$@vaadin/vaadin-dialog",
-    "@vaadin/vaadin-form-layout": "$@vaadin/vaadin-form-layout",
-    "@vaadin/vaadin-grid": "$@vaadin/vaadin-grid",
-    "@vaadin/vaadin-icon": "$@vaadin/vaadin-icon",
-    "@vaadin/vaadin-icons": "$@vaadin/vaadin-icons",
-    "@vaadin/vaadin-item": "$@vaadin/vaadin-item",
-    "@vaadin/vaadin-list-box": "$@vaadin/vaadin-list-box",
-    "@vaadin/vaadin-list-mixin": "$@vaadin/vaadin-list-mixin",
-    "@vaadin/vaadin-login": "$@vaadin/vaadin-login",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
     "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/vaadin-menu-bar": "$@vaadin/vaadin-menu-bar",
-    "@vaadin/vaadin-messages": "$@vaadin/vaadin-messages",
-    "@vaadin/vaadin-notification": "$@vaadin/vaadin-notification",
-    "@vaadin/vaadin-ordered-layout": "$@vaadin/vaadin-ordered-layout",
-    "@vaadin/vaadin-overlay": "$@vaadin/vaadin-overlay",
-    "@vaadin/vaadin-progress-bar": "$@vaadin/vaadin-progress-bar",
-    "@vaadin/vaadin-radio-button": "$@vaadin/vaadin-radio-button",
     "@vaadin/router": "$@vaadin/router",
-    "@vaadin/vaadin-select": "$@vaadin/vaadin-select",
-    "@vaadin/vaadin-split-layout": "$@vaadin/vaadin-split-layout",
-    "@vaadin/vaadin-tabs": "$@vaadin/vaadin-tabs",
-    "@vaadin/vaadin-template-renderer": "$@vaadin/vaadin-template-renderer",
-    "@vaadin/vaadin-text-field": "$@vaadin/vaadin-text-field",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/vaadin-time-picker": "$@vaadin/vaadin-time-picker",
-    "@vaadin/vaadin-upload": "$@vaadin/vaadin-upload",
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-virtual-list": "$@vaadin/vaadin-virtual-list",
     "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
     "@vaadin/virtual-list": "$@vaadin/virtual-list",
     "@polymer/polymer": "$@polymer/polymer",
@@ -348,6 +232,8 @@
     "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
     "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
-    "@vaadin/vaadin-confirm-dialog": "$@vaadin/vaadin-confirm-dialog"
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin/tabsheet": "$@vaadin/tabsheet",
+    "@vaadin/tooltip": "$@vaadin/tooltip"
   }
 }
