--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Hackernews clone for cycling news</description>
     <properties>
         <java.version>19</java.version>
-        <vaadin.version>24.0-SNAPSHOT</vaadin.version>
+        <vaadin.version>24.0.0.alpha6</vaadin.version>
         <vaadin.plugin.version>23.2.6</vaadin.plugin.version>
         <maven.versions.plugin>2.13.0</maven.versions.plugin>
         <rome.rss.version>1.18.0</rome.rss.version>
