--- a/package.json
+++ b/package.json
@@ -3,67 +3,67 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "24.0.0-beta2",
-    "@vaadin/app-layout": "24.0.0-beta2",
-    "@vaadin/avatar": "24.0.0-beta2",
-    "@vaadin/avatar-group": "24.0.0-beta2",
-    "@vaadin/bundles": "24.0.0-beta2",
-    "@vaadin/button": "24.0.0-beta2",
-    "@vaadin/checkbox": "24.0.0-beta2",
-    "@vaadin/checkbox-group": "24.0.0-beta2",
-    "@vaadin/combo-box": "24.0.0-beta2",
+    "@vaadin/accordion": "24.0.0-rc1",
+    "@vaadin/app-layout": "24.0.0-rc1",
+    "@vaadin/avatar": "24.0.0-rc1",
+    "@vaadin/avatar-group": "24.0.0-rc1",
+    "@vaadin/bundles": "24.0.0-rc1",
+    "@vaadin/button": "24.0.0-rc1",
+    "@vaadin/checkbox": "24.0.0-rc1",
+    "@vaadin/checkbox-group": "24.0.0-rc1",
+    "@vaadin/combo-box": "24.0.0-rc1",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "24.0.0-beta2",
-    "@vaadin/confirm-dialog": "24.0.0-beta2",
-    "@vaadin/context-menu": "24.0.0-beta2",
-    "@vaadin/custom-field": "24.0.0-beta2",
-    "@vaadin/date-picker": "24.0.0-beta2",
-    "@vaadin/date-time-picker": "24.0.0-beta2",
-    "@vaadin/details": "24.0.0-beta2",
-    "@vaadin/dialog": "24.0.0-beta2",
-    "@vaadin/email-field": "24.0.0-beta2",
-    "@vaadin/field-base": "24.0.0-beta2",
-    "@vaadin/field-highlighter": "24.0.0-beta2",
-    "@vaadin/form-layout": "24.0.0-beta2",
-    "@vaadin/grid": "24.0.0-beta2",
-    "@vaadin/horizontal-layout": "24.0.0-beta2",
-    "@vaadin/icon": "24.0.0-beta2",
-    "@vaadin/icons": "24.0.0-beta2",
-    "@vaadin/input-container": "24.0.0-beta2",
-    "@vaadin/integer-field": "24.0.0-beta2",
-    "@vaadin/item": "24.0.0-beta2",
-    "@vaadin/list-box": "24.0.0-beta2",
-    "@vaadin/lit-renderer": "24.0.0-beta2",
-    "@vaadin/login": "24.0.0-beta2",
-    "@vaadin/menu-bar": "24.0.0-beta2",
-    "@vaadin/message-input": "24.0.0-beta2",
-    "@vaadin/message-list": "24.0.0-beta2",
-    "@vaadin/multi-select-combo-box": "24.0.0-beta2",
-    "@vaadin/notification": "24.0.0-beta2",
-    "@vaadin/number-field": "24.0.0-beta2",
-    "@vaadin/overlay": "24.0.0-beta2",
-    "@vaadin/password-field": "24.0.0-beta2",
-    "@vaadin/polymer-legacy-adapter": "24.0.0-beta2",
-    "@vaadin/progress-bar": "24.0.0-beta2",
-    "@vaadin/radio-group": "24.0.0-beta2",
+    "@vaadin/component-base": "24.0.0-rc1",
+    "@vaadin/confirm-dialog": "24.0.0-rc1",
+    "@vaadin/context-menu": "24.0.0-rc1",
+    "@vaadin/custom-field": "24.0.0-rc1",
+    "@vaadin/date-picker": "24.0.0-rc1",
+    "@vaadin/date-time-picker": "24.0.0-rc1",
+    "@vaadin/details": "24.0.0-rc1",
+    "@vaadin/dialog": "24.0.0-rc1",
+    "@vaadin/email-field": "24.0.0-rc1",
+    "@vaadin/field-base": "24.0.0-rc1",
+    "@vaadin/field-highlighter": "24.0.0-rc1",
+    "@vaadin/form-layout": "24.0.0-rc1",
+    "@vaadin/grid": "24.0.0-rc1",
+    "@vaadin/horizontal-layout": "24.0.0-rc1",
+    "@vaadin/icon": "24.0.0-rc1",
+    "@vaadin/icons": "24.0.0-rc1",
+    "@vaadin/input-container": "24.0.0-rc1",
+    "@vaadin/integer-field": "24.0.0-rc1",
+    "@vaadin/item": "24.0.0-rc1",
+    "@vaadin/list-box": "24.0.0-rc1",
+    "@vaadin/lit-renderer": "24.0.0-rc1",
+    "@vaadin/login": "24.0.0-rc1",
+    "@vaadin/menu-bar": "24.0.0-rc1",
+    "@vaadin/message-input": "24.0.0-rc1",
+    "@vaadin/message-list": "24.0.0-rc1",
+    "@vaadin/multi-select-combo-box": "24.0.0-rc1",
+    "@vaadin/notification": "24.0.0-rc1",
+    "@vaadin/number-field": "24.0.0-rc1",
+    "@vaadin/overlay": "24.0.0-rc1",
+    "@vaadin/password-field": "24.0.0-rc1",
+    "@vaadin/polymer-legacy-adapter": "24.0.0-rc1",
+    "@vaadin/progress-bar": "24.0.0-rc1",
+    "@vaadin/radio-group": "24.0.0-rc1",
     "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "24.0.0-beta2",
-    "@vaadin/select": "24.0.0-beta2",
-    "@vaadin/split-layout": "24.0.0-beta2",
-    "@vaadin/tabs": "24.0.0-beta2",
-    "@vaadin/tabsheet": "24.0.0-beta2",
-    "@vaadin/text-area": "24.0.0-beta2",
-    "@vaadin/text-field": "24.0.0-beta2",
-    "@vaadin/time-picker": "24.0.0-beta2",
-    "@vaadin/tooltip": "24.0.0-beta2",
-    "@vaadin/upload": "24.0.0-beta2",
+    "@vaadin/scroller": "24.0.0-rc1",
+    "@vaadin/select": "24.0.0-rc1",
+    "@vaadin/split-layout": "24.0.0-rc1",
+    "@vaadin/tabs": "24.0.0-rc1",
+    "@vaadin/tabsheet": "24.0.0-rc1",
+    "@vaadin/text-area": "24.0.0-rc1",
+    "@vaadin/text-field": "24.0.0-rc1",
+    "@vaadin/time-picker": "24.0.0-rc1",
+    "@vaadin/tooltip": "24.0.0-rc1",
+    "@vaadin/upload": "24.0.0-rc1",
     "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-lumo-styles": "24.0.0-beta2",
-    "@vaadin/vaadin-material-styles": "24.0.0-beta2",
-    "@vaadin/vaadin-themable-mixin": "24.0.0-beta2",
+    "@vaadin/vaadin-lumo-styles": "24.0.0-rc1",
+    "@vaadin/vaadin-material-styles": "24.0.0-rc1",
+    "@vaadin/vaadin-themable-mixin": "24.0.0-rc1",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.0.0-beta2",
-    "@vaadin/virtual-list": "24.0.0-beta2",
+    "@vaadin/vertical-layout": "24.0.0-rc1",
+    "@vaadin/virtual-list": "24.0.0-rc1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "2.6.1"
@@ -78,7 +78,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "4.9.3",
-    "vite": "4.1.1",
+    "vite": "4.1.2",
     "vite-plugin-checker": "0.5.5",
     "workbox-build": "6.5.4",
     "workbox-core": "6.5.4",
@@ -87,67 +87,67 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "24.0.0-beta2",
-      "@vaadin/app-layout": "24.0.0-beta2",
-      "@vaadin/avatar": "24.0.0-beta2",
-      "@vaadin/avatar-group": "24.0.0-beta2",
-      "@vaadin/bundles": "24.0.0-beta2",
-      "@vaadin/button": "24.0.0-beta2",
-      "@vaadin/checkbox": "24.0.0-beta2",
-      "@vaadin/checkbox-group": "24.0.0-beta2",
-      "@vaadin/combo-box": "24.0.0-beta2",
+      "@vaadin/accordion": "24.0.0-rc1",
+      "@vaadin/app-layout": "24.0.0-rc1",
+      "@vaadin/avatar": "24.0.0-rc1",
+      "@vaadin/avatar-group": "24.0.0-rc1",
+      "@vaadin/bundles": "24.0.0-rc1",
+      "@vaadin/button": "24.0.0-rc1",
+      "@vaadin/checkbox": "24.0.0-rc1",
+      "@vaadin/checkbox-group": "24.0.0-rc1",
+      "@vaadin/combo-box": "24.0.0-rc1",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "24.0.0-beta2",
-      "@vaadin/confirm-dialog": "24.0.0-beta2",
-      "@vaadin/context-menu": "24.0.0-beta2",
-      "@vaadin/custom-field": "24.0.0-beta2",
-      "@vaadin/date-picker": "24.0.0-beta2",
-      "@vaadin/date-time-picker": "24.0.0-beta2",
-      "@vaadin/details": "24.0.0-beta2",
-      "@vaadin/dialog": "24.0.0-beta2",
-      "@vaadin/email-field": "24.0.0-beta2",
-      "@vaadin/field-base": "24.0.0-beta2",
-      "@vaadin/field-highlighter": "24.0.0-beta2",
-      "@vaadin/form-layout": "24.0.0-beta2",
-      "@vaadin/grid": "24.0.0-beta2",
-      "@vaadin/horizontal-layout": "24.0.0-beta2",
-      "@vaadin/icon": "24.0.0-beta2",
-      "@vaadin/icons": "24.0.0-beta2",
-      "@vaadin/input-container": "24.0.0-beta2",
-      "@vaadin/integer-field": "24.0.0-beta2",
-      "@vaadin/item": "24.0.0-beta2",
-      "@vaadin/list-box": "24.0.0-beta2",
-      "@vaadin/lit-renderer": "24.0.0-beta2",
-      "@vaadin/login": "24.0.0-beta2",
-      "@vaadin/menu-bar": "24.0.0-beta2",
-      "@vaadin/message-input": "24.0.0-beta2",
-      "@vaadin/message-list": "24.0.0-beta2",
-      "@vaadin/multi-select-combo-box": "24.0.0-beta2",
-      "@vaadin/notification": "24.0.0-beta2",
-      "@vaadin/number-field": "24.0.0-beta2",
-      "@vaadin/overlay": "24.0.0-beta2",
-      "@vaadin/password-field": "24.0.0-beta2",
-      "@vaadin/polymer-legacy-adapter": "24.0.0-beta2",
-      "@vaadin/progress-bar": "24.0.0-beta2",
-      "@vaadin/radio-group": "24.0.0-beta2",
+      "@vaadin/component-base": "24.0.0-rc1",
+      "@vaadin/confirm-dialog": "24.0.0-rc1",
+      "@vaadin/context-menu": "24.0.0-rc1",
+      "@vaadin/custom-field": "24.0.0-rc1",
+      "@vaadin/date-picker": "24.0.0-rc1",
+      "@vaadin/date-time-picker": "24.0.0-rc1",
+      "@vaadin/details": "24.0.0-rc1",
+      "@vaadin/dialog": "24.0.0-rc1",
+      "@vaadin/email-field": "24.0.0-rc1",
+      "@vaadin/field-base": "24.0.0-rc1",
+      "@vaadin/field-highlighter": "24.0.0-rc1",
+      "@vaadin/form-layout": "24.0.0-rc1",
+      "@vaadin/grid": "24.0.0-rc1",
+      "@vaadin/horizontal-layout": "24.0.0-rc1",
+      "@vaadin/icon": "24.0.0-rc1",
+      "@vaadin/icons": "24.0.0-rc1",
+      "@vaadin/input-container": "24.0.0-rc1",
+      "@vaadin/integer-field": "24.0.0-rc1",
+      "@vaadin/item": "24.0.0-rc1",
+      "@vaadin/list-box": "24.0.0-rc1",
+      "@vaadin/lit-renderer": "24.0.0-rc1",
+      "@vaadin/login": "24.0.0-rc1",
+      "@vaadin/menu-bar": "24.0.0-rc1",
+      "@vaadin/message-input": "24.0.0-rc1",
+      "@vaadin/message-list": "24.0.0-rc1",
+      "@vaadin/multi-select-combo-box": "24.0.0-rc1",
+      "@vaadin/notification": "24.0.0-rc1",
+      "@vaadin/number-field": "24.0.0-rc1",
+      "@vaadin/overlay": "24.0.0-rc1",
+      "@vaadin/password-field": "24.0.0-rc1",
+      "@vaadin/polymer-legacy-adapter": "24.0.0-rc1",
+      "@vaadin/progress-bar": "24.0.0-rc1",
+      "@vaadin/radio-group": "24.0.0-rc1",
       "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "24.0.0-beta2",
-      "@vaadin/select": "24.0.0-beta2",
-      "@vaadin/split-layout": "24.0.0-beta2",
-      "@vaadin/tabs": "24.0.0-beta2",
-      "@vaadin/tabsheet": "24.0.0-beta2",
-      "@vaadin/text-area": "24.0.0-beta2",
-      "@vaadin/text-field": "24.0.0-beta2",
-      "@vaadin/time-picker": "24.0.0-beta2",
-      "@vaadin/tooltip": "24.0.0-beta2",
-      "@vaadin/upload": "24.0.0-beta2",
+      "@vaadin/scroller": "24.0.0-rc1",
+      "@vaadin/select": "24.0.0-rc1",
+      "@vaadin/split-layout": "24.0.0-rc1",
+      "@vaadin/tabs": "24.0.0-rc1",
+      "@vaadin/tabsheet": "24.0.0-rc1",
+      "@vaadin/text-area": "24.0.0-rc1",
+      "@vaadin/text-field": "24.0.0-rc1",
+      "@vaadin/time-picker": "24.0.0-rc1",
+      "@vaadin/tooltip": "24.0.0-rc1",
+      "@vaadin/upload": "24.0.0-rc1",
       "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-lumo-styles": "24.0.0-beta2",
-      "@vaadin/vaadin-material-styles": "24.0.0-beta2",
-      "@vaadin/vaadin-themable-mixin": "24.0.0-beta2",
+      "@vaadin/vaadin-lumo-styles": "24.0.0-rc1",
+      "@vaadin/vaadin-material-styles": "24.0.0-rc1",
+      "@vaadin/vaadin-themable-mixin": "24.0.0-rc1",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.0.0-beta2",
-      "@vaadin/virtual-list": "24.0.0-beta2",
+      "@vaadin/vertical-layout": "24.0.0-rc1",
+      "@vaadin/virtual-list": "24.0.0-rc1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "2.6.1"
@@ -162,13 +162,13 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "4.9.3",
-      "vite": "4.1.1",
+      "vite": "4.1.2",
       "vite-plugin-checker": "0.5.5",
       "workbox-build": "6.5.4",
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "f26bf3c93651c591c88e620b014a926cbabab6d731cc8dbfeaef6f3b18bc7f4e"
+    "hash": "6344209669969d2cdf793fd363d25a83b0c12118444890c8304098210e5208fc"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
