Fix trivy timeout

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -79,6 +79,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
           ignore-unfixed: true
           timeout: '10m'
+          scanners: 'vuln'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
